[gd_scene load_steps=14 format=3 uid="uid://blmtg8xt7jd6k"]

[ext_resource type="Script" path="res://scenes/abilities/rock/rock.gd" id="1_0aprp"]
[ext_resource type="Texture2D" uid="uid://b2g5v7yvkgv8r" path="res://assets/Foozle_2DE0001_Pixel_Magic_Effects/Rocks/001.png" id="2_yy6mj"]
[ext_resource type="Texture2D" uid="uid://daix2ggs4gu1y" path="res://assets/Foozle_2DE0001_Pixel_Magic_Effects/Rocks/002.png" id="3_01kwd"]
[ext_resource type="Texture2D" uid="uid://be6h2hgf0tnkf" path="res://assets/Foozle_2DE0001_Pixel_Magic_Effects/Rocks/003.png" id="4_6h323"]
[ext_resource type="Texture2D" uid="uid://cr0rdttfsqayq" path="res://assets/Foozle_2DE0001_Pixel_Magic_Effects/Rocks/004.png" id="5_65aac"]
[ext_resource type="Texture2D" uid="uid://b5nnhcg1uygj" path="res://assets/Foozle_2DE0001_Pixel_Magic_Effects/Rocks/005.png" id="6_46qvw"]
[ext_resource type="Texture2D" uid="uid://cmaovwgb36j8m" path="res://assets/Foozle_2DE0001_Pixel_Magic_Effects/Rocks/006.png" id="7_svanh"]
[ext_resource type="Texture2D" uid="uid://bnukfkir5ryuc" path="res://assets/Foozle_2DE0001_Pixel_Magic_Effects/Rocks/007.png" id="8_q14rq"]
[ext_resource type="Texture2D" uid="uid://2o41qei1lsw0" path="res://assets/Foozle_2DE0001_Pixel_Magic_Effects/Rocks/008.png" id="9_85moa"]
[ext_resource type="Texture2D" uid="uid://chwh4lv1g7x1g" path="res://assets/Foozle_2DE0001_Pixel_Magic_Effects/Rocks/009.png" id="10_iodgv"]
[ext_resource type="Texture2D" uid="uid://dpt7n1limji80" path="res://assets/Foozle_2DE0001_Pixel_Magic_Effects/Rocks/010.png" id="11_6vl5o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2ni87"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_svanh")
}, {
"duration": 1.0,
"texture": ExtResource("8_q14rq")
}, {
"duration": 1.0,
"texture": ExtResource("9_85moa")
}, {
"duration": 1.0,
"texture": ExtResource("10_iodgv")
}, {
"duration": 1.0,
"texture": ExtResource("11_6vl5o")
}],
"loop": false,
"name": &"Impact",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yy6mj")
}, {
"duration": 1.0,
"texture": ExtResource("3_01kwd")
}, {
"duration": 1.0,
"texture": ExtResource("4_6h323")
}, {
"duration": 1.0,
"texture": ExtResource("5_65aac")
}, {
"duration": 1.0,
"texture": ExtResource("6_46qvw")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pu0iw"]
radius = 15.0333

[node name="Rock" type="Node2D"]
script = ExtResource("1_0aprp")

[node name="DeletionTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
sprite_frames = SubResource("SpriteFrames_2ni87")
animation = &"Impact"
autoplay = "default"

[node name="ImpactTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.3

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Area2D"]
shape = SubResource("CircleShape2D_pu0iw")

[connection signal="timeout" from="DeletionTimer" to="." method="_on_deletion_timer_timeout"]
[connection signal="timeout" from="DeletionTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AnimatedSprite2D/ImpactTimer" to="." method="_on_impact_timer_timeout"]
[connection signal="area_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
